--- a/.gitignore
+++ b/.gitignore
@@ -1,106 +1,29 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as long as the template is
-#  in version control, these files should not be.
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-drive-retrive/
-# IPython
-profile_default/
-ipython_log.py
-
-# Environments
-.env
-.venv
-env/
-stcvenv/
+# Ignore virtual environment
 venv/
 ENV/
-env.bak/
-venv.bak/
+env/
 
-# mypy
-.mypy_cache/
+# Python cache and bytecode
+__pycache__/
+*.py[cod]
+*.pyo
 
-# IDE files
-.idea/
+# FastAPI/Python logs
+*.log
+server_log.txt
+
+# IDE and OS files
 .vscode/
 *.swp
-*~
-*.bak
-
-# OS generated files
 .DS_Store
 Thumbs.db
 
-# Temp files
-temp_*
-*.tmp
+# Security keys and certs
+*.pem
+cert.pem
+key.pem
+
+
+# Environment files
+.env
+
